--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       <div id="container-blurb">
 
       	<div id="blurb" class="hidden">Louis d'Heudieres is a composer and performer based in London. He makes music for live performance situations, collaborates with visual artists, dancers, and theatre makers, improvises, teaches, and sometimes writes texts. His interests lie in questioning the idea of music, especially as it has come to be defined socially and culturally in the West. As such, his work examines the norms of the concert format, engages with performers' lived experience outside of musical training, and embraces experimental approaches to scoring. Through the practice of aural notation he has developed a body of work which explores the semantic/sonic duality inherent in recorded and found sounds, extending, in a way, the tradition of musique concrète. Many of his works stage vocal, instrumental, or choreographic translations of these sounds, foregrounding performers' personal interpretations of them. His works have been performed around the world, in everything from underground corners of small DIY scenes to state-funded international festivals.
+
+      	testing :)
       	</div>
 
       </div>
