--- a/some_thoughts_on_composition_1960.html
+++ b/some_thoughts_on_composition_1960.html
@@ -38,7 +38,7 @@
 
       <div id="container-right">
 
-        <!--<img src="imgs/some_thoughts_1.jpg" style="width: 640px"/>-->
+        <img src="imgs/some_thoughts_D.jpg" style="width: 640px"/>
         <img src="imgs/its_about_time_FTH.jpg" style="width: 640px"/>
         <img src="imgs/its_about_time_FTH_2.jpg" style="width: 640px"/>
         <img src="imgs/its_about_time_FTH_4.jpg" style="width: 640px"/>
