--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <div class="work"><div class="workimage"><a target="_blank" rel="noopener noreferrer" href="laughter_studies_3.html"><img src="imgs/maulwerker-ls3-2.png"/></a></div><div class="worktitle"><div><a target="_blank" rel="noopener noreferrer" href="laughter_studies_3.html">Laughter Studies 3</a></div><div class="workinfo"> three performers</div></div></div>
 
-        <div class="work"><div class="workimage"><a target="_blank" rel="noopener noreferrer" href="some_thoughts_on_composition_1960.html"><img src="imgs/some_thoughts_1.jpg"/></a></div><div class="worktitle"><div><a target="_blank" rel="noopener noreferrer" href="some_thoughts_on_composition_1960.html">Some Thoughts On La Monte Young's Composition 1960 #10</a></div><div class="workinfo"> performer, powerpoint presentation, stereo sound</div></div></div>
+        <div class="work"><div class="workimage"><a target="_blank" rel="noopener noreferrer" href="some_thoughts_on_composition_1960.html"><img src="imgs/some_thoughts_1.JPG"/></a></div><div class="worktitle"><div><a target="_blank" rel="noopener noreferrer" href="some_thoughts_on_composition_1960.html">Some Thoughts On La Monte Young's Composition 1960 #10</a></div><div class="workinfo"> performer, powerpoint presentation, stereo sound</div></div></div>
 
         <div class="work"><div class="workimage"><a target="_blank" rel="noopener noreferrer" href="laughter_studies_2.html"><img src="imgs/LS2_louis_alice.jpg"/></a></div><div class="worktitle"><div><a target="_blank" rel="noopener noreferrer" href="laughter_studies_2.html">Laughter Studies 2</a></div><div class="workinfo"> two performers</div></div></div>
 
