Fred camera image

--- a/sitzfleisch.html
+++ b/sitzfleisch.html
@@ -38,7 +38,7 @@
       <div id="container-right">
 
         <img src="imgs/filipa_11.jpg" style="width: 640px"/>
-        <img src="imgs/fred_cam_2.jpg" style="width: 640px"/>
+        <img src="imgs/Fred_cam_2.jpg" style="width: 640px"/>
         <img src="imgs/bass_drums-1.jpg" style="width: 640px"/>
         <img src="imgs/james_sitting_1.jpg" style="width: 640px"/>
         <img src="imgs/filipa_2.jpg" style="width: 640px"/>        
