photos Kristof Lemp

--- a/laughter_studies_7.html
+++ b/laughter_studies_7.html
@@ -46,6 +46,7 @@
         <img src="imgs/LS7-5.jpg" style="width: 640px"/>
         <img src="imgs/LS7-3.jpg" style="width: 640px"/>
         <img src="imgs/LS7-4.jpg" style="width: 640px"/>
+        <div class="imgtext">Photos by Kristof Lemp</div>
         
 
       </div>
