new corror text

--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 
         <div id="corror" class="hidden">
           <div class="title">corror, tiou, squa, pipiqui</div>
-          <div class="text">1-channel sound, hanging perspex birdfeeder</div>
+          <div class="text">perspex, screws, bolts, steel cable, grains, twigs, 1-channel sound</div>
           <div class="text">with Nina Kuttler</div><br>
 
-          <div class="text">corror, tiou, squa, pipiqui tells the story of Frederick the Great's attempted extermination of sparrows through sonic warfare in 1744. It reconstructs the subsequent attempts by composers to attract the sparrows back to the realm after Frederick's edict brought about ecological disaster. Staged in a hanging bird feeder, it complicates interactions between music history and ecology, probing how things might have turned out differently if we had learnt from Frederick's mistakes, and replaced the man-over-nature stance of the enlightenment with a philosophy that embraced ecological symbiosis with non-human agents. The title is taken from a birdsong-inspired poem by J. M. Bechstein.</div><br>
+          <div class="text">corror, tiou, squa, pipiqui tells the story of Frederick the Great's attempted extermination of sparrows through sonic warfare in 1744. It reconstructs the subsequent attempts by composers to attract the sparrows back after Frederick's edict brought about ecological disaster. Staged in a hanging bird feeder, it complicates interactions between music history and ecology, probing how things might have turned out differently if we had learnt from Frederick's mistakes, and replaced the man-over-nature stance of the enlightenment with a philosophy that embraced ecological symbiosis with non-human agents. The title is taken from a birdsong-inspired poem by J. M. Bechstein.</div><br>
 
           <iframe width="75%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1439072740&color=%239f9d80&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
