hearing pinkish and maximaler genuss added

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
   			<span class="menutitle">projects</span><br>
   			<!--<a onclick="showhide('cilia')">CILIA</a><br>-->
+        <a onclick="showhide('hearingpinkish')">Hearing Pinkish-Orange, Soft, Malleable and Ductile</a><br>
+        <a onclick="showhide('maximaler')">Maximaler Genuss</a><br>
   		  <a onclick="showhide('corror')">corror, tiou, squa, pipiqui</a><br>
   		  <a onclick="showhide('debussysecret')">Debussy's Secret Devotions</a><br>
   		  <a onclick="showhide('reflects')">Reflects Dans Sequana</a><br>
@@ -52,7 +54,7 @@
         <a onclick="showhide('autoglossia')">Autoglossia</a><br>
         <a onclick="showhide('empathy')">Empathy Reducer</a><br>
         <a onclick="showhide('voxpop')">Vox Pop</a><br>
-        <a onclick="showhide('totalexp')">Total Experience</a><br>
+        <!--<a onclick="showhide('totalexp')">Total Experience</a><br>-->
         <a onclick="showhide('somethoughts')">Some Thoughts On La Monte Young’s Composition 1960 #10</a><br>
         <a onclick="showhide('foron')">for_____ on_____</a><br>
         <a onclick="showhide('neitherserious')">neither serious/or, I take the liberty/of not writing to you/regarding my serious ‘Variations’</a><br>
@@ -83,6 +85,7 @@
 
           <div class="row">
             <div class="column">
+              <a onclick="showhide('hearingpinkish')"><img src="imgs/hearingpinkish3.jpg"/></a>
               <a onclick="showhide('debussysecret')"><img src="imgs/debussy-secret-pfeil.jpg"/></a>
               <a onclick="showhide('empathy')"><img src="imgs/empathy_reducer_1.jpg"/></a>
               <a onclick="showhide('sitzfleisch')"><img src="imgs/james_sitting_1.jpg"/></a>
@@ -96,6 +99,7 @@
               <a onclick="showhide('voxpop')"><img src="imgs/vox_pop_ba.png"/></a>
             </div>
             <div class="column">
+              <a onclick="showhide('maximaler')"><img src="imgs/baege_231576.jpg"/></a>
               <a onclick="showhide('reflects')"><img src="imgs/ZUBIN_KANGA_City_London_373.jpg"/></a>
               <a onclick="showhide('ls1')"><img src="imgs/LS1_FTH.jpg"/></a>
               <a onclick="showhide('autoglossia')"><img src="imgs/autogloss-2.png"/></a>
@@ -105,6 +109,49 @@
 
         </div>
   		</div>
+
+        <div id="maximaler" class="hidden">
+          <div class="title">Maximaler Genuss</div>
+          <div class="text">Site-specific performance for two performers, stereo sound, beer, cheese, c. 35 minutes</div><br>
+
+          <div class="text">Devised for Dortmund’s Museum Ostwall, which sits on the 6th floor of the U building, this performance combines ideas from haute cuisine with the music from Wagner’s Parsifal. While enjoying the epic views over the city afforded by the museum, two performers invite the audience to consume different pairings of cheese and beer at a precise climax point in Wagner’s music. This ritual is said to be able to elevate all who take part in it to a higher plane of consciousness. This queering of holy communion, which gives the knights of the Grail everlasting life in Parsifal, serves to humorously but critically examine themes of pretentiousness, privilege, masculinity, and musical transcendence.</div><br>
+
+          <img src="imgs/baege_231576.jpg" style="width: 75%"/>
+          <img src="imgs/baege_231656.jpg" style="width: 75%"/>
+          <img src="imgs/baege_231689.jpg" style="width: 75%"/>
+          <img src="imgs/baege_231865.jpg" style="width: 75%"/>
+          <img src="imgs/baege_231872.jpg" style="width: 75%"/>
+          <img src="imgs/baege_231910.jpg" style="width: 75%"/>
+          <img src="imgs/baege_231948.jpg" style="width: 75%"/>
+          <img src="imgs/baege_232076.jpg" style="width: 75%"/>
+          <img src="imgs/baege_232202.jpg" style="width: 75%"/>
+          <img src="imgs/baege_236756.jpg" style="width: 75%"/>
+          <div class="perflist">Photos by <a href="https://www.rolandbaege.de/">Roland Baege</a></div>
+
+          <div class="perflist">
+            <p>Part II of Annika Kahrs, <em>A Sinfonie And Its Parts</em>, in <em>Nam June Paik: I Expose The Music</em>, Museum Ostwall, Dortmund, 2023</p>
+          </div>
+        </div>
+
+        <div id="hearingpinkish" class="hidden">
+          <div class="title">Hearing Pinkish-Orange, Soft, Malleable and Ductile</div>
+          <div class="text">16-channel sound, light, 25 minutes</div><br>
+
+          <div class="text">Linking together stories of resource extraction, millenia-old magma in the earth’s core, circuits, cables, and loudspeaker membranes, Hearing Pinkish Orange, Soft, Malleable And Ductile reflects on the material costs of listening in the 21st century. Using sound as a medium to tell its own story, it reflects on the intertwined networks of geo-industrial logistics, consumer technology and emotional desire that lie behind the supposedly immaterial flows of energy from speakers to ear drums. The title is derived from a description of copper, the metal ubiquitous in electrical cables and circuits.</div><br>
+
+          <img src="imgs/hearingpinkish1.jpg" style="width: 75%"/>
+          <img src="imgs/hearingpinkish2.jpg" style="width: 75%"/>
+          <img src="imgs/hearingpinkish3.jpg" style="width: 75%"/>
+          <img src="imgs/hearingpinkish4.jpg" style="width: 75%"/>
+          <img src="imgs/hearingpinkish5.jpg" style="width: 75%"/>
+          <img src="imgs/hearingpinkish6.jpg" style="width: 75%"/>
+          <img src="imgs/hearingpinkish7.jpg" style="width: 75%"/>
+          <div class="perflist">Photos by Fred Dott</div>
+
+          <div class="perflist">
+            <p><em>If a Tree Falls in a Forest and No One Is Around, Does It Even Make a Sound?</em> curated by Tobias Peper<br>21.01.23 - 12.02.23 Kunstverein Harburger Bahnhof</p>
+          </div>
+        </div>
 
         <div id="corror" class="hidden">
           <div class="title">corror, tiou, squa, pipiqui</div>
@@ -127,13 +174,14 @@
 
   			<div id="debussysecret" class="hidden">
   				<div class="title">Debussy's Secret Devotions</div>
-        	<div class="text">Article</div><br>
+        	<div class="text">Article; pencil and inkjet print on paper, 29.7 x 21cm</div><br>
 
-        	<div class="text">Debussy's Secret Devotions is a piece of speculative musicology which reimagines Claude Debussy's life story and the true purpose of his music. Written as a correspondence between academic colleagues, it sheds light on the composer's association with a shadowy sect called the Sequanae – a fringe spiritual terrorist group who sought to reset western civilization through natural disaster, and who worshipped the goddess of the river Seine, Sequana.</div><br>
+        	<div class="text">Debussy's Secret Devotions is a piece of speculative musicology which reimagines Claude Debussy's life story and the true purpose of his music. Written as a correspondence between academic colleagues, it sheds light on the composer's association with a shadowy sect called the Sequanae – a fringe spiritual terrorist group who sought to reset western civilization through natural disaster, and who worshipped the goddess of the river Seine, Sequana. A corrective edition of Claude Debussy’s manuscript of <em>Reflets Dans L’Eau</em> from 1905 is also provided.</div><br>
 
         	<img src="imgs/debussy-secret-pfeil.jpg" style="width: 75%"/>
 
        		<div class="perflist"><br>
+            <p>Edition of 10 sold to support the victims of earthquakes in Turkey and Syria.</p>
        			<p>Published in <a href="https://www.montezpress.com/catalogue/pfeil/friend/">Pfeil Magazine #16 - Friend</a>, 2022</p>
        			<p>Readings: Montez Press Radio, London (2022)</p>
        			<p>See also: <a onclick="showhide('reflects')">Reflects Dans Sequana</a></p>
