video pinkish orange added

--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@
 
           <div class="text">Linking together stories of resource extraction, millenia-old magma in the earth’s core, circuits, cables, and loudspeaker membranes, Hearing Pinkish Orange, Soft, Malleable And Ductile reflects on the material costs of listening in the 21st century. Using sound as a medium to tell its own story, it reflects on the intertwined networks of geo-industrial logistics, consumer technology and emotional desire that lie behind the supposedly immaterial flows of energy from speakers to ear drums. The title is derived from a description of copper, the metal ubiquitous in electrical cables and circuits.</div><br>
 
+          <iframe width="75%" height="300" scrolling="no" src="https://player.vimeo.com/video/854591231?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture"></iframe>
+
           <img src="imgs/hearingpinkish1.jpg" style="width: 75%"/>
           <img src="imgs/hearingpinkish2.jpg" style="width: 75%"/>
           <img src="imgs/hearingpinkish3.jpg" style="width: 75%"/>
