--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <a onclick="showhide('hearingpinkish')">Hearing Pinkish-Orange, Soft, Malleable and Ductile</a><br>
         <a onclick="showhide('maximaler')">Maximaler Genuss</a><br>
   		  <a onclick="showhide('corror')">corror, tiou, squa, pipiqui</a><br>
+        <a onclick="showhide('liebe')">Liebe und Fr&uuml;hling in Bergedorf</a><br>
   		  <a onclick="showhide('debussysecret')">Debussy's Secret Devotions</a><br>
   		  <a onclick="showhide('reflects')">Reflects Dans Sequana</a><br>
         <a onclick="showhide('lungs')">Need Bigger Lungs</a><br>
@@ -92,11 +93,11 @@
               <a onclick="showhide('trj-wire')"><img src="imgs/TRJ-Wire-403-1.jpg"/></a>
             </div>
             <div class="column">
+              <a onclick="showhide('corror')"><img src="imgs/corror_easterfield_1.jpg"/></a>
+              <a onclick="showhide('liebe')"><img src="imgs/annikakahrs-howtolive-1-helge-mundt.jpg"/></a>
               <a onclick="showhide('ls2')"><img src="imgs/julia_LEVS.jpg"/></a>
-              <a onclick="showhide('ls4')"><img src="imgs/LS4-xy.png"/></a>
               <a onclick="showhide('ls6')"><img src="imgs/LS6_1.jpg"></a>
               <a onclick="showhide('ls7')"><img src="imgs/LS7-4.jpg"></a>
-              <a onclick="showhide('voxpop')"><img src="imgs/vox_pop_ba.png"/></a>
             </div>
             <div class="column">
               <a onclick="showhide('maximaler')"><img src="imgs/baege_231576.jpg"/></a>
@@ -112,9 +113,11 @@
 
         <div id="maximaler" class="hidden">
           <div class="title">Maximaler Genuss</div>
-          <div class="text">Site-specific performance for two performers, stereo sound, beer, cheese, c. 35 minutes</div><br>
+          <div class="text">Site-specific performance and installation, stereo sound, assortment of cheese, assortment of beer, refrigerator, cups</div><br>
 
-          <div class="text">Devised for Dortmund’s Museum Ostwall, which sits on the 6th floor of the U building, this performance combines ideas from haute cuisine with the music from Wagner’s Parsifal. While enjoying the epic views over the city afforded by the museum, two performers invite the audience to consume different pairings of cheese and beer at a precise climax point in Wagner’s music. This ritual is said to be able to elevate all who take part in it to a higher plane of consciousness. This queering of holy communion, which gives the knights of the Grail everlasting life in Parsifal, serves to humorously but critically examine themes of pretentiousness, privilege, masculinity, and musical transcendence.</div><br>
+          <div class="text">Reflecting the history of Dortmund’s Museum Ostwall building, which used to be the Dortmunder Union beer brewery, this performance-installation combines a beer tasting experience with music from Wagner’s Parsifal. While enjoying the epic views over the city afforded by the museum, two performers invite the audience to consume different pairings of beer and cheese at a precise climax point in Wagner’s music. This multisensory ritual is said to be able to elevate all who take part into a higher plane of consciousness. A queering of holy communion, which gives the knights of the Grail everlasting life in Parsifal, the act serves to humorously but critically examine themes of pretentiousness, privilege, masculinity, and musical transcendence.</div><br>
+
+          <iframe width="75%" height="300" scrolling="no" src="https://player.vimeo.com/video/853433751?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture"></iframe>
 
           <img src="imgs/baege_231576.jpg" style="width: 75%"/>
           <img src="imgs/baege_231656.jpg" style="width: 75%"/>
@@ -129,7 +132,7 @@
           <div class="perflist">Photos by <a href="https://www.rolandbaege.de/">Roland Baege</a></div>
 
           <div class="perflist">
-            <p>Part II of Annika Kahrs, <em>A Sinfonie And Its Parts</em>, in <em>Nam June Paik: I Expose The Music</em>, Museum Ostwall, Dortmund, 2023</p>
+            <p>Part of Annika Kahrs, <em>A Sinfonie And Its Parts</em>, in <em>Nam June Paik: I Expose The Music</em><br>15.07.23 - 23.07.23 Museum Ostwall, Dortmund</p>
           </div>
         </div>
 
@@ -137,7 +140,7 @@
           <div class="title">Hearing Pinkish-Orange, Soft, Malleable and Ductile</div>
           <div class="text">16-channel sound, light, 25 minutes</div><br>
 
-          <div class="text">Linking together stories of resource extraction, millenia-old magma in the earth’s core, circuits, cables, and loudspeaker membranes, Hearing Pinkish Orange, Soft, Malleable And Ductile reflects on the material costs of listening in the 21st century. Using sound as a medium to tell its own story, it reflects on the intertwined networks of geo-industrial logistics, consumer technology and emotional desire that lie behind the supposedly immaterial flows of energy from speakers to ear drums. The title is derived from a description of copper, the metal ubiquitous in electrical cables and circuits.</div><br>
+          <div class="text">Linking together stories of resource extraction, millenia-old magma in the earth’s core, loudspeaker manufacture, and emotional desire, Hearing Pinkish Orange, Soft, Malleable And Ductile reflects on the material entanglements of listening in the 21st century. Using sound as a medium for musical and textual narrative, it both embodies and calls into question the supposedly immaterial flows of energy—from speaker membranes to ear drums—that so ubiquitously define contemporary modes of aurality. The title is derived from a description of copper, the primary metal in electrical cables and circuits.</div><br>
 
           <iframe width="75%" height="300" scrolling="no" src="https://player.vimeo.com/video/854591231?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture"></iframe>
 
@@ -160,7 +163,7 @@
           <div class="text">perspex, screws, bolts, steel cable, grains, twigs, 1-channel sound</div>
           <div class="text">with Nina Kuttler</div><br>
 
-          <div class="text">corror, tiou, squa, pipiqui tells the story of Frederick the Great's attempted extermination of sparrows through sonic warfare in 1744. It reconstructs the subsequent attempts by composers to attract the sparrows back after Frederick's edict brought about ecological disaster. Staged in a hanging bird feeder, it complicates interactions between music history and ecology, probing how things might have turned out differently if we had learnt from Frederick's mistakes, and replaced the man-over-nature stance of the enlightenment with a philosophy that embraced ecological symbiosis with non-human agents. The title is taken from a birdsong-inspired poem by J. M. Bechstein.</div><br>
+          <div class="text">corror, tiou, squa, pipiqui tells the story of Frederick the Great's attempted extermination of sparrows through sonic warfare in 1744. It reconstructs the subsequent attempts by composers to attract the sparrows back after Frederick's edict brought about ecological disaster. Staged in a hanging bird feeder, it complicates interactions between music history and ecology, probing how things might have turned out differently if we had learnt from Frederick's mistakes, and replaced the man-over-nature stance of the enlightenment with a philosophy that embraced ecological symbiosis with non-human beings. The title is taken from a birdsong-inspired poem by J. M. Bechstein.</div><br>
 
           <iframe width="75%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1439072740&color=%239f9d80&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
@@ -170,7 +173,25 @@
           <div class="perflist">Photos by Easterfield Festival</div>
 
           <div class="perflist">
-            <p>Exhibitions: Easterfield Festival, Hamburg, 2022</p>
+            <p>08.09.2022 - 10.09.2022 Easterfield Festival, Hamburg</p>
+          </div>
+        </div>
+
+        <div id="liebe" class="hidden">
+          <div class="title">Liebe und Fr&uuml;hling in Bergedorf</div>
+          <div class="text">2-channel sound, 3 minutes</div><br>
+
+          <div class="text">Liebe und Frühling in Bergedorf interweaves two love stories through music: the poem <em>Wie sich Rebenranken schwingen</em>, published in 1833 by August Heinrich Hoffmann von Fallersleben, and the personal testimony of Beata Ehlers, who migrated from Poland to the outskirts of Hamburg in the 1980s, where she met her husband Marco. Taking a setting of von Fallersleben’s poem by Johannes Brahms and interspersing Ehlers’s account, the city of Hamburg (where Brahms was living when he set the poem to music) is conceptualised as a point of connection between people and time periods. The piece was interpreted by soprano <a href="https://frejasandkamm.com/">Freja Sandkamm</a> and me, both of us drawing on our own stories of migration to the north German city.</div><br>
+
+          <iframe width="75%" height="300" src="https://www.youtube.com/embed/mM0zHelBCQQ?si=drKuqzbTfghXoY3g&amp;controls=0&amp;start=222" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+          <img src="imgs/annikakahrs-howtolive-1-helge-mundt.jpg" style="width: 75%"/>
+          <img src="imgs/annikakahrs-howtolive-2-helge-mundt.jpg" style="width: 75%"/>
+          <img src="imgs/annikakahrs-howtolive-3-helge-mundt.jpg" style="width: 75%"/>
+          <div class="perflist">Photos by Helge Mundt</div>
+
+          <div class="perflist">
+            <p>Part of <em>how to live in the echo of other places</em>, an exhibition by Annika Kahrs curated by Ellen Blumenstein in co-operation with IMAGINE THE CITY<br>01.06.22 - 04.09.22 Schuppen 29, Baakenhöft, Hamburg</p>
           </div>
         </div>
 
@@ -178,7 +199,7 @@
   				<div class="title">Debussy's Secret Devotions</div>
         	<div class="text">Article; pencil and inkjet print on paper, 29.7 x 21cm</div><br>
 
-        	<div class="text">Debussy's Secret Devotions is a piece of speculative musicology which reimagines Claude Debussy's life story and the true purpose of his music. Written as a correspondence between academic colleagues, it sheds light on the composer's association with a shadowy sect called the Sequanae – a fringe spiritual terrorist group who sought to reset western civilization through natural disaster, and who worshipped the goddess of the river Seine, Sequana. A corrective edition of Claude Debussy’s manuscript of <em>Reflets Dans L’Eau</em> from 1905 is also provided.</div><br>
+        	<div class="text">A piece of speculative musicology reimagining Claude Debussy's music as holding secrets which make it too dangerous for contemporary audiences. Delving into some of the composer's unreleased correspondences, it reveals his association with a shadowy sect called the Sequanae – a fringe spiritual terrorist group who sought to reset western civilization through natural disaster, and who worshipped the goddess of the river Seine, Sequana. Urgently-needed corrections of his music are suggested through detailed annotations of the 1905 manuscript of <em>Reflets Dans L’Eau</em> for piano.</div><br>
 
         	<img src="imgs/debussy-secret-pfeil.jpg" style="width: 75%"/>
 
@@ -226,10 +247,10 @@
 
   			<div id="sitzfleisch" class="hidden">
   				<div class="title">Sitzfleisch</div>
-				  <div class="text">Performance for trio, narrator, styrofoam instruments, video, stereo sound</div>
+				  <div class="text">Performance for three musicians, narrator, styrofoam props, objects, video, 2-channel sound</div>
 				  <div class="text">30 minutes</div><br>
 
-        	<div class="text">Sitzfleisch rethinks the theory behind the acts of sitting, listening, and making music in a concert hall. After theorists in the early 1800s elevated music to the status where it could express transcendental truths, it became increasingly important for audiences to sit in silence, the better to appreciate the music in a purely aesthetic way. 'Sitzfleisch' was then invented as a term to refer to the act of sitting still during a concert using the control of one's muscles. Sitzfleisch features hobbling instrumental pulses, thick MIDI interludes, conceptual applause, live commentary, and styrofoam. All along, the idea that the audience is undergoing a transcendental moment is reinforced to the point of absurdity.<br>
+        	<div class="text">'Sitzfleisch' was a term invented in the nineteenth century to refer to the act of sitting still during a concert, the better to appreciate music in a purely aesthetic way. Although now culturally entrenched, this practice was at that time relatively new, following contemporary theories that art could express pure beauty or transcendental truth. Using borrowed and original musical material, unconventional playing techniques, and text, this piece rethinks early Romantic theory and the acts of sitting, listening, and musicking in a concert. All along, the idea that the audience is undergoing a transcendental moment is reinforced to the point of absurdity.<br>
         	</div><br>
 
         	<iframe title="vimeo-player" src="https://player.vimeo.com/video/393921013?h=db75209fbe" width="75%" height="42%" frameborder="0" allowfullscreen></iframe>
@@ -569,11 +590,13 @@
         	<div id="about" class="hidden">
         		<div class="padding"></div>
 
-        		<div class="text">I am a composer, sound artist and researcher. I was born in 1988 in Suresnes, France, lived in the UK for a while, and am now based in Hamburg.<br><br>
+        		<div class="text">I am a sound artist, composer and researcher. I was born in 1988 in Suresnes, France, lived in the UK for a while, and am now based in Hamburg.<br><br>
 
-        		I work across the mediums of writing, live performance and installation, seeking to speculatively (re)imagine pasts, presents and futures of musical production and reception. My work is characterised by  stream-of-consciousness descriptions of recorded sound; pseudo-intellectual ramblings underpinned by hobbling instrumental pulses; speakers talking to floors; transcendental climaxes squeezed through MIDI timbres; paranoid associations between musical details and religious hegemonies; decadent rituals pairing Wagnerian harmony with fine cheese. It has been performed in everything from underground corners of small DIY scenes to state-funded international festivals (e.g. Lucerne, Darmstadt, Gaudeamus, Bang On A Can), broadcast on national radio stations (e.g. BBC Radio 3, SWR 2), exhibited in insitutions such as Kunstverein Harburger Bahnhof, and published in Pfeil and TEMPO magazines.<br><br>
+        		Spanning live performance, installation and writing, my work speculatively (re)imagines pasts, presents and futures of human and non-human music-making. It is characterised by stream-of-consciousness descriptions of recorded sound; pseudo-intellectual ramblings underpinned by hobbling instrumental pulses; speakers talking to floors; transcendental climaxes squeezed through MIDI timbres; paranoid associations between musical details and religious hegemonies; decadent rituals pairing Wagnerian harmony with fine cheese. It has been exhibited in institutions such as Kunstverein Harburger Bahnhof, IMAGINE THE CITY and Museum Ostwall Dortmund, performed in everything from small DIY scenes to state-funded international festivals (Lucerne, Darmstadt, Gaudeamus, Bang On A Can), broadcast on national radio stations (BBC Radio 3, SWR 2), and published in Pfeil, Posthumanist and TEMPO magazines.<br><br>
 
-        		My research interests are notation, speculative music history, materialities of sound, participatory art, and music's sociality, in particular the culturally-embedded and -enacted roles of composer, performer and audience. 
+            My collaborations have included music for sound and video installations at the 16th Lyon Biennale of Contemporary Art, Schering Stiftung and SAVVY Contemporary, amongst many others.<br><br>
+
+        		My research interests include materialities of sound, speculative music history, participatory art, and music's sociality, in particular the culturally-embedded and -enacted roles of composer, performer and audience. 
         		</div><br>
 
         		<div class="text">louis [dot] dheudieres [at] live [dot] co [dot] uk</div><br>
