LS7 vimeo-youtube fix

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         	<div class="text">Laughter Studies 7 uses listening, verbal description, music and text to explore the sonic environment of concert halls. It evokes sounds from everyday life; sounds an audience makes as it quietens down before the arrival of performers on stage; sounds of a dystopian function band noodling its way through aimless musical material; sounds of musicians shuffling off a stage; sounds created live in the room by the tense community of concert-goers.<br><br>
         	</div>
 
-        	<iframe src="https://player.vimeo.com/video/324153961" width="75%" height="42%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        	<iframe width="75%" height="42%" src="https://www.youtube.com/embed/7nDJKSBcOFw?si=XBZwLeD4Ff6ng3AP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         	<img src="imgs/LS7-1.jpg" style="width: 75%"/>
         	<img src="imgs/LS7-2.jpg" style="width: 75%"/>
         	<img src="imgs/LS7-5.jpg" style="width: 75%"/>
