metal ii metal updates

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
   			<span class="menutitle">projects</span><br>
   			<!--<a onclick="showhide('cilia')">CILIA</a><br>-->
+        <a onclick="showhide('metal')">METAL II METAL</a><br>
         <a onclick="showhide('hearingpinkish')">Hearing Pinkish-Orange, Soft, Malleable and Ductile</a><br>
         <a onclick="showhide('maximaler')">Maximaler Genuss</a><br>
   		  <a onclick="showhide('corror')">corror, tiou, squa, pipiqui</a><br>
@@ -111,13 +112,33 @@
         </div>
   		</div>
 
+        <div id="metal" class="hidden">
+          <div class="title">METAL II METAL</div>
+          <div class="text">Malachite copper ore, copper wire, one channel sound, 8 minutes</div><br>
+
+          <div class="text">METAL II METAL looks at the life cycle of copper from the perspective of sound. Since humans have begun to stockpile music, sonic journeys—from a source to a cochlea—have increasingly involved signals passing through electrical circuits. Furthermore, every digital act (a stream, a search, a click) involves a physical counterpart written in metallic circuitry and air-conditioned server farming. Digital or not, ‘immaterial’ processes of listening rely on the mining, extraction, refinement and distribution of minerals such as copper from the earth’s crust. In the 21st century, listening is geological. The music in METAL II METAL consists of deconstructed artifacts of metal—the musical genre—which was, since its birth in Birmingham, UK, a reflection of the industrial processes that had irreversibly left their mark on the cultural and environmental landscape.</div><br>
+
+          <img src="imgs/DSC8110.jpg" style="width: 75%"/>
+          <img src="imgs/DSC8113.jpg" style="width: 75%"/>
+          <img src="imgs/DSC8114.jpg" style="width: 75%"/>
+          <img src="imgs/DSC8115.jpg" style="width: 75%"/>
+          <img src="imgs/DSC8116.jpg" style="width: 75%"/>
+          <img src="imgs/DSC8117.jpg" style="width: 75%"/>
+          <img src="imgs/DSC8217.jpg" style="width: 75%"/>
+          <div class="perflist">Photos by <a href="https://www.jaewon-kim.com/info">Jaewon Kim</a></div>
+
+          <div class="perflist">
+            <p><em>&because my mother was crazy</em> <br>14.06.24 - 23.06.24 FRISE, Hamburg</p>
+          </div>
+        </div>
+
         <div id="maximaler" class="hidden">
           <div class="title">Maximaler Genuss</div>
           <div class="text">Site-specific performance and installation, stereo sound, assortment of cheese, assortment of beer, refrigerator, cups</div><br>
 
           <div class="text">Reflecting the history of Dortmund’s Museum Ostwall building, which used to be the Dortmunder Union beer brewery, this performance-installation combines a beer tasting experience with music from Wagner’s Parsifal. While enjoying the epic views over the city afforded by the museum, two performers invite the audience to consume different pairings of beer and cheese at a precise climax point in Wagner’s music. This multisensory ritual is said to be able to elevate all who take part into a higher plane of consciousness. A queering of holy communion, which gives the knights of the Grail everlasting life in Parsifal, the act serves to humorously but critically examine themes of pretentiousness, privilege, masculinity, and musical transcendence.</div><br>
 
-          <iframe width="75%" height="300" scrolling="no" src="https://player.vimeo.com/video/853433751?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture"></iframe>
+          <iframe width="75%" height="42%" src="https://www.youtube.com/embed/AaSKEkZzdXQ?si=j8YtGMJdn79KqBdc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
           <img src="imgs/baege_231576.jpg" style="width: 75%"/>
           <img src="imgs/baege_231656.jpg" style="width: 75%"/>
@@ -441,11 +462,11 @@
         		<div class="text">Empathy Reducer is a piece about playing the piano. Different facets of piano playing – everything from traditional repertoire, to the physical action of keys being pressed, to plain old virtuosity, to good old wood’n’string resonances – are taken as basic objects. Rather than being presented directly, they are skirted around, hinted at, and put through various filters. Some of these include a human voice – the piano’s great-great-great-great-great grandparent? – and a MIDI controller – an enhanced, Philip K. Dick-like replicant of a piano, an AI computer to the piano’s humble homo sapiens. Stretched in the middle of all these things – octopus-like, spread-eagled – is that curved, tensed, gridded institution of an instrument.
         		</div><br>
 
-        		<iframe title="vimeo-player" src="https://player.vimeo.com/video/539200658?h=874ffe7ffe" width="75%" height="42%" frameborder="0" allowfullscreen></iframe>
+        		<iframe width="75%" height="42%" src="https://www.youtube.com/embed/zYOWK5Xg74o?si=MfS8GDmrIsVlZBYc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
         		<div class="perflist"><br>
         		<p>Written for and commissioned by <a href="https://www.josephhouston.co.uk/">Joseph Houston</a>.</p>
-        		<p>Performances: St John's, Smith Square, London (2018), Uneh&ouml;rte Musik, BKA Theatre Berlin (2017)</p>
+        		<p>Performances: St John's, Smith Square, London (2018), Unerh&ouml;rte Musik, BKA Theatre Berlin (2017)</p>
         		</div>
         	</div>
 
@@ -475,7 +496,7 @@
         		</div>
         	</div>
 
-        	<div id="totalexp" class="hidden">
+        	<!--<div id="totalexp" class="hidden">
         		<div class="title">Total Experience</div>
         		<div class="text">Performance for soloist</div>
         		<div class="text">7 minutes</div><br>
@@ -505,7 +526,7 @@
         		<div class="perflist">
         			<br>Performances: the billion year spree, Flat Time House, London (2019), Weisslich 3, Hundred Years Gallery, London (2015)
         		</div>
-        	</div>
+        	</div>-->
 
         	<div id="foron" class="hidden">
         		<div class="title">for_____ on_____</div>
