--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <a onclick="showhide('empathy')">Empathy Reducer</a><br>
         <a onclick="showhide('voxpop')">Vox Pop</a><br>
         <!--<a onclick="showhide('totalexp')">Total Experience</a><br>-->
-        <a onclick="showhide('somethoughts')">Some Thoughts On La Monte Young’s Composition 1960 #10</a><br>
+        <!--<a onclick="showhide('somethoughts')">Some Thoughts On La Monte Young’s Composition 1960 #10</a><br>-->
         <a onclick="showhide('foron')">for_____ on_____</a><br>
         <a onclick="showhide('neitherserious')">neither serious/or, I take the liberty/of not writing to you/regarding my serious ‘Variations’</a><br>
         <br>
@@ -118,13 +118,13 @@
 
           <div class="text">METAL II METAL looks at the life cycle of copper from the perspective of sound. Since humans have begun to stockpile music, sonic journeys—from a source to a cochlea—have increasingly involved signals passing through electrical circuits. Furthermore, every digital act (a stream, a search, a click) involves a physical counterpart written in metallic circuitry and air-conditioned server farming. Digital or not, ‘immaterial’ processes of listening rely on the mining, extraction, refinement and distribution of minerals such as copper from the earth’s crust. In the 21st century, listening is geological. The music in METAL II METAL consists of deconstructed artifacts of metal—the musical genre—which was, since its birth in Birmingham, UK, a reflection of the industrial processes that had irreversibly left their mark on the cultural and environmental landscape.</div><br>
 
-          <img src="imgs/DSC8110.jpg" style="width: 75%"/>
-          <img src="imgs/DSC8113.jpg" style="width: 75%"/>
-          <img src="imgs/DSC8114.jpg" style="width: 75%"/>
-          <img src="imgs/DSC8115.jpg" style="width: 75%"/>
-          <img src="imgs/DSC8116.jpg" style="width: 75%"/>
-          <img src="imgs/DSC8117.jpg" style="width: 75%"/>
-          <img src="imgs/DSC8217.jpg" style="width: 75%"/>
+          <img src="imgs/_DSC8110.jpg" style="width: 75%"/>
+          <img src="imgs/_DSC8113.jpg" style="width: 75%"/>
+          <img src="imgs/_DSC8114.jpg" style="width: 75%"/>
+          <img src="imgs/_DSC8115.jpg" style="width: 75%"/>
+          <img src="imgs/_DSC8116.jpg" style="width: 75%"/>
+          <img src="imgs/_DSC8117.jpg" style="width: 75%"/>
+          <img src="imgs/_DSC8217.jpg" style="width: 75%"/>
           <div class="perflist">Photos by <a href="https://www.jaewon-kim.com/info">Jaewon Kim</a></div>
 
           <div class="perflist">
