--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <div id="metal" class="hidden">
           <div class="title">METAL II METAL</div>
-          <div class="text">Malachite copper ore, copper wire, one channel sound, 8 minutes</div><br>
+          <div class="text">Malachite copper ore, copper wire, 1-channel sound, 8 minutes</div><br>
 
           <div class="text">METAL II METAL looks at the life cycle of copper from the perspective of sound. Since humans have begun to stockpile music, sonic journeys—from a source to a cochlea—have increasingly involved signals passing through electrical circuits. Furthermore, every digital act (a stream, a search, a click) involves a physical counterpart written in metallic circuitry and air-conditioned server farming. Digital or not, ‘immaterial’ processes of listening rely on the mining, extraction, refinement and distribution of minerals such as copper from the earth’s crust. In the 21st century, listening is geological. The music in METAL II METAL consists of deconstructed artifacts of metal—the musical genre—which was, since its birth in Birmingham, UK, a reflection of the industrial processes that had irreversibly left their mark on the cultural and environmental landscape.</div><br>
 
